<resources>
    <string name="app_name">Covid-19 Monitor</string>
    <string name="search_country">Search country</string>
    <string name="region">REGION</string>
    <string name="country">COUNTRY</string>
    <string name="countries_details">Infected countries by COVID - 19</string>
    <string name="reports_details">Total data related to the disease</string>
    <string name="prevention_details">Help you avoid the risk of infection</string>
    <string name="symptoms_details">Signs identify the risk of infection</string>
    <string name="symptoms">
        The COVID-19 virus affects different people in different ways.  COVID-19 is a respiratory disease and most infected people will develop mild to moderate symptoms and recover without requiring special treatment.  People who have underlying medical conditions and those over 60 years old have a higher risk of developing severe disease and death.\n\nCommon symptoms include:\n1. fever\n2. tiredness\n3. dry cough.\n\n
Other symptoms include:\n4. shortness of breath\n5. aches and pains\n6. sore throat\n
and very few people will report diarrhoea, nausea or a runny nose.\n\nPeople with mild symptoms who are otherwise healthy should self-isolate and contact their medical provider or a COVID-19 information line for advice on testing and referral.\n\nPeople with fever, cough or difficulty breathing should call their doctor and seek medical attention.
    </string>
    <string name="preventions">To prevent infection and to slow transmission of COVID-19, do the following:\n\n1. Wash your hands regularly with soap and water, or clean them with alcohol-based hand rub.\n\n2. Maintain at least 1 metre distance between you and people coughing or sneezing.\n\n3. Avoid touching your face.\n\n4. Cover your mouth and nose when coughing or sneezing.\n\n5. Stay home if you feel unwell.\n\n6. Refrain from smoking and other activities that weaken the lungs.\n\n7. Practice physical distancing by avoiding unnecessary travel and staying away from large groups of people.</string>
    <string name="search_your_country">Search your country</string>
    <string name="sanitizer">Sanitizer</string>
    <string name="visit_who">Visit WHO</string>
    <string name="be_safe_be_smart_be_kind">Be safe, Be smart, Be kind</string>
    <string name="soap">Soap</string>
    <string name="gloves">Gloves</string>
    <string name="help_you_prevent_viruses_better">Help you prevent viruses better</string>
    <string name="requirements">Requirements</string>
    <string name="covid_19_news">COVID-19 News</string>
    <string name="countries">Countries</string>
    <string name="reports">Reports</string>
    <string name="prevention">Prevention</string>
    <string name="symptoms_dashboard">Symptoms</string>
    <string name="project_coordinator">Project Coordinator</string>
    <string name="coordinator_name">Dr. Ahmad Neyaz Khan</string>
    <string name="lab_coordinator">Lab Coordinator</string>
    <string name="lab_coordinator_name">Mr. Kashif Asad Sir</string>
    <string name="sakshi_shukla">Sakshi Shukla</string>
    <string name="bca_3rd_yr">BCA 3rd yr</string>
    <string name="sakshi_enroll">1900103091</string>
    <string name="saijal_gupta">Saijal Gupta</string>
    <string name="saijal_enroll">1901018286</string>
    <string name="team_members">Team Members</string>
    <string name="shabaj_ansari">Shabaj Ansari</string>
    <string name="shabaj_enroll">1901018305</string>
</resources>

